# high-performance-python-2e-ja

./: .gitignore  README.md  pyproject.toml
01_understanding/: check_prime.py  reducing_operations.py
02_profiling/: julia1.py  julia1_decorator.py  julia1_lineprofiler.py  julia1_lineprofiler2.py  julia1_lineprofiler3.py  julia1_memoryprofiler.py  julia1_memoryprofiler2.py  julia1_memoryprofiler_with_labels.py  julia1_nopil.py  utility.py
03_lists_tuples/: binary_search.py  binary_vs_linear_search.py  linear_search.py
04_dict_set/: custom_hash_function.py  unique_lookup.py
05_iterators/: fibonacci.py  lazy_data_analysis.py
06_matrix/diffusion_2d/: README.md  _benchmark.py  diffusion_numpy.py  diffusion_numpy_memory.py  diffusion_numpy_memory2.py  diffusion_numpy_memory2_numexpr.py  diffusion_numpy_memory2_numexpr_single.py  diffusion_numpy_naive.py  diffusion_python.py  diffusion_python_memory.py  diffusion_scipy.py
06_matrix/pandas/: compare_sklearn_lstsq_timing.py  generate_data.py  plot_min_max_slopes.py  sklearn_line_profiler.py  str_operation.py  time_iteration_methods.py  utility.py
07_compiling/cffi/: diffusion_2d_cffi.py  diffusion_2d_cffi_inline.py
07_compiling/julia/: julia1_nopil.py  julia1_nopil_expanded_math_pypy.py  julia1_numba.py  julia1_numba_expandedmath_inspection.py
07_compiling/pytorch/: compare.py  diffusion_numpy.py  diffusion_pytorch.py
08_concurrency/crawler/: parallel_requests.py  server.py
08_concurrency/crawler/asyncio/: crawler.py
08_concurrency/crawler/gevent/: crawler.py
08_concurrency/crawler/serial/: crawler.py
08_concurrency/crawler/tornado/: crawler.py
08_concurrency/crawler/tornado_callback/: crawler.py
08_concurrency/workload/: workload.py
09_multiprocessing/locking/: ex1_lock.py  ex1_nolock1.py  ex1_nolock4.py  ex2_lock.py  ex2_lock_rawvalue.py  ex2_nolock.py  ex3_redis.py
09_multiprocessing/np_shared_example/: np_shared.py
09_multiprocessing/np_shared_example/rnd_demo/: np_shared_rnd_parallel.py  np_shared_rnd_serial.py
09_multiprocessing/pi_estimation/pi_lists_parallel/: pi_lists_parallel.py  (+4 more)
09_multiprocessing/prime_generation/: plot_serial_vs_queue_times.py  primes.py  primes_pool.py  primes_queue.py  primes_queue_jobs_feeder_thread.py  primes_queue_less_work.py
09_multiprocessing/prime_validation/: create_range.py  plot_prime_validation_times.py  primes.py  primes_factor_test.py  primes_pool_per_number1.py  primes_pool_per_number2.py  primes_pool_per_number_manager.py  primes_pool_per_number_mmap.py  primes_pool_per_number_mmap2.py  primes_pool_per_number_mmap3.py  primes_pool_per_number_mmap4.py  primes_pool_per_number_redis.py  primes_pool_per_number_value.py
10_clusters/docker/: Makefile
10_clusters/ipython_parallel/: pi_ipython_cluster.py
11_less_ram/compressing_text/: plot_example.py  text_example.py  text_example_clean_list.py  text_example_clean_list_wikipedia_gensim.py  text_example_dawg.py  text_example_dawg_load_only.py  text_example_list.py  text_example_list_bisect.py  text_example_set.py  text_example_trie.py  text_example_trie_load_only.py
11_less_ram/getsizeof/: asizeof.py
11_less_ram/morris_counter_example/: morris_counter.py  show_morris_counter.py
11_less_ram/numexpr_pandas/: make_cross_entropy_picture.py
11_less_ram/probabilistic_datastructures/: _benchmark.py  hyperloglog.py  kminvalues.py  ll.py  llregister.py  morriscounter.py  prob_ds_figure.py  scalingbloomfilter.py
11_less_ram/sklearn_hashing_trick/: feature_hashing_explanation2.py  feature_hashing_test1.py
11_less_ram/sparse/: benchmark_sparse.py
12_lessons/: sieve.py
(+17 files in other folders)
