[tool.poetry]
name = "high-performance-python-2e-ja"
version = "0.1.0"
description = "The code for high performance Python"
authors = ["Hironsan"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pyproject-flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
filename = "*.py"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.taskipy.tasks]
isort = "isort . -c"
flake8 = "pflake8 --filename \"*.py\""
black = "black --check ."
mypy = "mypy --namespace-packages --explicit-package-bases ."
