[tool.poetry]
name = "high-performance-python-2e-ja"
version = "0.1.0"
description = "The code for high performance Python"
authors = ["Hironsan"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
line-profiler = "^4.0.2"
Pillow = "^9.4.0"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
numba = "^0.56.4"
numexpr = "^2.8.4"
tqdm = "^4.64.1"
torch = "^1.13.1"
Cython = "^0.29.33"
gevent = "^22.10.2"
requests = "^2.28.2"
aiohttp = "^3.8.3"
tornado = "^6.2"
bcrypt = "^4.0.1"
uvloop = "^0.17.0"
fasteners = "^0.18"
redis = "^4.4.2"
prettytable = "^3.6.0"
ipyparallel = "^8.4.1"
pynsq = "^0.9.1"
gensim = "^4.3.0"
memory-profiler = "^0.61.0"
DAWG-Python = "^0.7.2"
marisa-trie = "^0.7.8"
bitarray = "^2.7.0"
mmh3 = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pyproject-flake8 = "^6.0.0"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,E731"
filename = "*.py"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.taskipy.tasks]
isort = "isort . -c"
flake8 = "pflake8 --filename \"*.py\""
black = "black --check ."
mypy = "mypy --namespace-packages --explicit-package-bases ."
